# simon-tools

./: CMakeLists.txt
Simone/BlackBerry/BBSimone/: README  bar-descriptor.xml  env.sh  simone.pro
Simone/BlackBerry/BBSimone/src/: main.cpp  qmlsimoneview.cpp  qmlsimoneview.h  simoneview.cpp  simoneview.h
Simone/BlackBerry/BBSimone/src/qml/simone/: ActiveConsole.qml  AnimatedItem.qml  Button.qml  CheckBox.qml  ComboBox.qml  ConnectionSettings.qml  Dialog.qml  EditableComboBox.qml  LineEdit.qml  ProgressBar.qml  main.qml
Simone/BlackBerry/BBSimoneShared/: BBSimoneShared.pro  recognitionresult.h  simondconnector.cpp  simondconnector.h  simone.h  simonprotocol.h  simonsound.h  soundbackend.cpp  soundbackend.h  soundinput.cpp  soundinput.h
Simone/BlackBerry/BBSimoneShared/alsa/: alsabackend.cpp  alsabackend.h
Simone/BlackBerry/BBSimoneShared/qmlapplicationviewer/: qmlapplicationviewer.cpp
Simone/BlackBerry/BBSimoneShared/qnx/: qsabackend.cpp  qsabackend.h
Simone/N9/: qmlsimoneview.cpp  simondconnector.cpp  simone.desktop  simone_harmattan.desktop
Simone/N9/qtc_packaging/debian_harmattan/: control  copyright
astromobile/: CMakeLists.txt  LICENSE  README  astromobile.conf  astromobile.kdev4
astromobile/astrocam/: CMakeLists.txt  README  astrocam.cpp  astrocam.h  astrocam.tdwtffodder.cpp  astrocam.tdwtffodder.h  info.echord.Astromobile.xml  main.cpp  vlc_add_debug_output.patch  vlm.conf
astromobile/astrocam/web/: index.php  navigate.php  ui.html
astromobile/astrologic/: CMakeLists.txt  astrologic.cpp  astrologic.h  info.echord.Astromobile.xml  location.cpp  location.h  locations.xml  main.cpp  start.sh
astromobile/locator/: CMakeLists.txt  info.echord.Astromobile.xml  locator.cpp  locator.h  main.cpp
astromobile/navigator/: CMakeLists.txt  info.echord.Astromobile.xml  main.cpp  navigator.cpp  navigator.h  scitos.xml
benefit/: CMakeLists.txt
benefit/panic/: main.cpp  mainwindow.cpp  mainwindow.h
benefit/simonskype/: CMakeLists.txt  Messages.sh
benefit/simonskype/cmake/: FindEventsimulation.cmake  FindLibSkype.cmake
benefit/simonskype/src/: CMakeLists.txt  main.cpp  simonskype.cpp  simonskype.h
benefit/simonskype/src/libskype/: skype.cpp  skype.h  skypewindow.cpp
benefit/simonskype/src/libskype/skypedbus/: skypeconnection.cpp  skypeconnection.h
benefit/simonstatus/: CMakeLists.txt  Messages.sh
benefit/simonstatus/src/: main.cpp  simonstatus.desktop
benefit/speechcal/: CMakeLists.txt  Messages.sh
benefit/speechcal/src/: calendarmodel.h  main.cpp  main.ui  speechcal.cpp  speechcal.desktop  speechcalview.cpp
common/: CMakeLists.txt
common/skype/: CMakeLists.txt  Messages.sh  skype.cpp  skype.h  skype_export.h  skypewindow.cpp
common/skype/skypedbus/: skypeconnection.cpp  skypeconnection.h
simon-touch/: Makefile  Messages.sh  communicationcentral.cpp  communicationcentral.h  configuration.cpp  configuration.h  contactsmodel.cpp  contactsmodel.h  declarativeimageprovider.cpp  declarativeimageprovider.h  flatfilesystemmodel.cpp  flatfilesystemmodel.h  imageprovider.cpp  imageprovider.h  imagesmodel.h  mail.cpp  mail.h  main.cpp  messagemodel.cpp  messagemodel.h  musicmodel.h  qmlsimontouchview.cpp  qmlsimontouchview.h  rssfeed.cpp  rssfeed.h  rssfeeds.cpp  rssfeeds.h  rssgroups.cpp  rssgroups.h  simontouch.cpp  simontouch.desktop  simontouch.h  simontouch.pro  simontouch_harmattan.desktop  simontouchadapter.cpp  simontouchadapter.h  simontouchview.cpp  simontouchview.h  skypevoipprovider.cpp  skypevoipprovider.h  (+5 more)
simon-touch/libskype/: skype.cpp  skype.h  skypewindow.cpp
simon-touch/libskype/skypedbus/: skypeconnection.cpp
simon-touch/messages/: simontouch_de.ts
simon-touch/qml/simontouch/: MainActiveCall.qml  MainCommunication.qml  MainCommunicationReadMessages.qml  MainCommunicationSendMessage.qml  MainImages.qml  MainInformation.qml  MainInformationImages.qml  MainInformationMusic.qml  MainInformationNews.qml  MainInformationVideos.qml  MainMusic.qml  MainNews.qml  MainNewsFeeds.qml  MainOrders.qml  MainOrdersCheck.qml  MainRequests.qml  MainRequestsShopping.qml  MainRequestsShoppingHousehold.qml  MainRequestsShoppingMedicine.qml  MainRequestsSupport.qml  MainRequestsTransport.qml  MainScreen.qml  MainVideos.qml  main.qml
simon-touch/qml/simontouch/img/: .directory  kleine.xcf
simon-touch/qml/simontouch/parts/: AutoFlippable.qml  BusyIndicator.qml  Button.qml  KeyCalcButton.qml  ListButton.qml  MessagesListDelegate.qml  NewsButton.qml  Page.qml  PageGrid.qml  RSSArticle.qml  RSSButton.qml  RSSGroupButton.qml  SelectionListView.qml  SideButton.qml  TabPage.qml  button.js
simone/: contactcommand.h  contactsmodel.h  destinationcommand.h  destinationmodel.h  simondconnector.cpp  simone.desktop  simone_harmattan.desktop  soundinput.cpp
simone/qml/simone/: DestinationDelegate.qml
simone/qtc_packaging/debian_harmattan/: README  changelog
